[package]
name = "workshop-runner"
version = "0.2.1"
edition = "2021"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
description = "A CLI to run test-driven Rust workshops"
keywords = ["workshop", "education", "learning"]
categories = ["command-line-utilities"]
repository = "https://github.com/mainmatter/rust-workshop-runner"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "wr"
path = "src/main.rs"

[lib]
name = "wr"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
fs-err = "2.9.0"
indexmap = "2.0.0"
read_input = "0.8.6"
regex = "1.9.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
yansi = "0.5.1"
textwrap = "0.16.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
